refactor: correct errors in the text

--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
                         <li class="user-block__contacts-item">
                             <span class="user-block__tel">Phone: <a href="tel:+375333513308" class="user-block__tel-link">+375 33 351-33-08</a></span>
                         </li>
-                        <div class="user-block__contacts-icons">
-                        <li class="user-block__contacts-item user-block__contacts-icons-items">
-                                <a href="mailto:viktoriya_ryzhkova_00@mail.ru">
-                                    <img src="img/email-icon.svg" alt="logo: email-logo" class="user-block__email-svg">
-                                </a>
-                        </li>
-                        <li class="user-block__contacts-item user-block__contacts-icons-items">
-                            <a href="https://github.com/vryzhkova" class="user-block__link-github">
-                                <img src="img/github-logo.svg" alt="logo: github-logo" class="user-block__github-svg">
-                            </a>
-                        </li>
-                        <li class="user-block__contacts-item user-block__contacts-icons-items">
-                            <a href="https://t.me/vryzhkova" class="user-block__link-telegram">
-                                <img src="img/telegram_icon.svg" alt="logo: telegram-logo" class="user-block__telegram-svg">
-                            </a>
-                        </li>
-                    </div>
                     </ul>
+                        <ul class="user-block__contacts-list-icons">
+                            <li class="user-block__contacts-item user-block__contacts-icons-items">
+                                    <a href="mailto:viktoriya_ryzhkova_00@mail.ru">
+                                        <img src="img/email-icon.svg" alt="logo: email-logo" class="user-block__email-svg">
+                                    </a>
+                            </li>
+                            <li class="user-block__contacts-item user-block__contacts-icons-items">
+                                <a href="https://github.com/vryzhkova" class="user-block__link-github">
+                                    <img src="img/github-logo.svg" alt="logo: github-logo" class="user-block__github-svg">
+                                </a>
+                            </li>
+                            <li class="user-block__contacts-item user-block__contacts-icons-items">
+                                <a href="https://t.me/vryzhkova" class="user-block__link-telegram">
+                                    <img src="img/telegram_icon.svg" alt="logo: telegram-logo" class="user-block__telegram-svg">
+                                </a>
+                            </li>
+                        </ul>
                 </div>
             </div>
         </header>
@@ -84,7 +84,7 @@
                     <h4 class="cv-languages__title">Languages</h4>
                     <ul class="cv-languages__list">
                         <li class="cv-languages__item">Belarusian - Native</li>
-                        <li class="cv-languages__item">Russian — C2 - Perfect</li>
+                        <li class="cv-languages__item">Russian - C2 - Perfect</li>
                         <li class="cv-languages__item">English - A2 - Pre-Intermediate</li>
                     </ul>
                 </div>
@@ -93,7 +93,7 @@
             <section class="block-right box">
                 <div class="cv-about">
                     <h4 class="cv-about__me-title">About Me</h4>
-                        <p class="cv-about__me-text">My name is Victoria Ryzhkova.</p>
+                        <p class="cv-about__me-text">My name is Viktoria Ryzhkova.</p>
                         <p class="cv-about__me-text">I highly motivated quick learner, not conflicted, polite and stress-resistant 
                                 team member.</p>
                         <p class="cv-about__me-text">I have successfully completed 3 courses at the HTML Academy - “HTML and CSS. 
@@ -115,15 +115,15 @@
                             <ul class="academy-list">
                                 <li class="academy-list-item">
                                     <a href="https://assets.htmlacademy.ru/certificates/intensive/193/1620049.pdf" class="academy-list-item-link">HTML &CSS. Professional Website Coding</a>
-                                    <div class="academy-list-item-text">Graduate projecta -<a href="https://github.com/vryzhkova/1620049-nerds-30" class="academy-list-item-link">Nerds</a></div> 
+                                    <div class="academy-list-item-text">Graduate project - <a href="https://github.com/vryzhkova/1620049-nerds-30" class="academy-list-item-link">Nerds</a></div> 
                                 </li>
                                 <li class="academy-list-item">
                                     <a href="https://assets.htmlacademy.ru/certificates/intensive/199/1620049.pdf" class="academy-list-item-link">HTML &CSS. Professional Website Coding</a>
-                                    <div class="academy-list-item-text">Graduate project -<a href="https://github.com/vryzhkova/1620049-pink-22" class="academy-list-item-link">Pink</a></div> 
+                                    <div class="academy-list-item-text">Graduate project - <a href="https://github.com/vryzhkova/1620049-pink-22" class="academy-list-item-link">Pink</a></div> 
                                 </li>
                                 <li class="academy-list-item">
                                     <a href="https://assets.htmlacademy.ru/certificates/intensive/205/1620049.pdf" class="academy-list-item-link">JavaScript. Professional Development of Web Interfaces</a>
-                                    <div class="academy-list-item-text">Graduate project -<a href="https://vryzhkova.github.io/1620049-kekstagram-23/" class="academy-list-item-link">Kekstagram</a></div> 
+                                    <div class="academy-list-item-text">Graduate project - <a href="https://vryzhkova.github.io/1620049-kekstagram-23/" class="academy-list-item-link">Kekstagram</a></div> 
                                 </li>
                             </ul>
                         </li>
