refactor: change some html tags according to project guidelines

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <h1 class="user-block__name">Viktoryia Ryzhkova</h1>
                     <h2 class="user-block__position">Junior Frontend Developer</h2>
                 </div>
-                <div class="user-block__contacts">
+                <nav class="user-block__contacts">
                     <h3 class="user-block__contacts-title">Contact information</h3>
                     <ul class="user-block__contacts-list">
                         <li class="user-block__contacts-item">
@@ -49,7 +49,7 @@
                                 </a>
                             </li>
                         </ul>
-                </div>
+                </nav>
             </div>
         </header>
     
@@ -115,28 +115,28 @@
                             <ul class="academy-list">
                                 <li class="academy-list-item">
                                     <a href="https://assets.htmlacademy.ru/certificates/intensive/193/1620049.pdf" class="academy-list-item-link">HTML &CSS. Professional Website Coding</a>
-                                    <div class="academy-list-item-text">Graduate project - <a href="https://github.com/vryzhkova/1620049-nerds-30" class="academy-list-item-link">Nerds</a></div> 
+                                    <div class="academy-list-item-text">Graduate project - <a href="https://github.com/vryzhkova/1620049-nerds-30" target="_blank" class="academy-list-item-link">Nerds</a></div> 
                                 </li>
                                 <li class="academy-list-item">
                                     <a href="https://assets.htmlacademy.ru/certificates/intensive/199/1620049.pdf" class="academy-list-item-link">HTML &CSS. Professional Website Coding</a>
-                                    <div class="academy-list-item-text">Graduate project - <a href="https://github.com/vryzhkova/1620049-pink-22" class="academy-list-item-link">Pink</a></div> 
+                                    <div class="academy-list-item-text">Graduate project - <a href="https://github.com/vryzhkova/1620049-pink-22" target="_blank" class="academy-list-item-link">Pink</a></div> 
                                 </li>
                                 <li class="academy-list-item">
                                     <a href="https://assets.htmlacademy.ru/certificates/intensive/205/1620049.pdf" class="academy-list-item-link">JavaScript. Professional Development of Web Interfaces</a>
-                                    <div class="academy-list-item-text">Graduate project - <a href="https://vryzhkova.github.io/1620049-kekstagram-23/" class="academy-list-item-link">Kekstagram</a></div> 
+                                    <div class="academy-list-item-text">Graduate project - <a href="https://vryzhkova.github.io/1620049-kekstagram-23/" target="_blank" class="academy-list-item-link">Kekstagram</a></div> 
                                 </li>
                             </ul>
                         </li>
                         <li class="cv-work__list-item cv-work__list-item-size">JS, CSS, HTML, Git video courses on YouTube channel Glo Academy
                             <ul class="glo-academy-list">
                                 <li class="glo-academy-list__item">
-                                    <a href="https://github.com/vryzhkova/nfs-js" class="glo-academy-list__item-link">Need for Speed</a>
+                                    <a href="https://github.com/vryzhkova/nfs-js" target="_blank" class="glo-academy-list__item-link">Need for Speed</a>
                                 </li>
                                 <li class="glo-academy-list__item">
-                                    <a href="https://github.com/vryzhkova/willberries-js" class="glo-academy-list__item-link">Willberries</a>
+                                    <a href="https://github.com/vryzhkova/willberries-js" target="_blank" class="glo-academy-list__item-link">Willberries</a>
                                 </li>
                                 <li class="glo-academy-list__item">
-                                    <a href="https://github.com/vryzhkova/YaTunes" class="glo-academy-list__item-link">YaTunes</a>
+                                    <a href="https://github.com/vryzhkova/YaTunes" target="_blank" class="glo-academy-list__item-link">YaTunes</a>
                                 </li>
                             </ul>
                         </li>
